<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rearing mothers calendar</string>
	<string name="app_name_basic">QueenB</string>    
    <string name="settings">Settings</string>
    <string name="novy_chov">New rearing</string>
    <string name="ok">OK</string>    
    <string name="o_programe">About the program</string>    
    <string name="zoznam_chovov">List of holdings</string>
    <string name="date_text"><u>Insert the date by clicking here</u></string>
    <string name="vlozenie_plemeniva">Date of adding breed material in ponds</string>
    <string name="cas_pre_notifikaciu">Notification shall be made by:</string>
    <string name="prevesenie_plastu">Any slack in pollen comb in supers</string>
    <string name="vlozenie_suse">Insert a land base for farming mother</string>
    <string name="priprava_sadky">Preparation of ponds, insertion grafting breed material</string>
    <string name="prelozenie_serie">Translated into a series of supers nurse colonies</string>
    <string name="premiestnenie_matecniku1">Possible relocation queen cells 1</string>
    <string name="kontrola_zavieckovania">Maybe check capping</string>
    <string name="premiestnenie_matecniku2">Possible relocation queen cells 2</string>
    <string name="skolkovanie">packing queen cells</string>
    <string name="premiestnenie_matecniku3">Possible relocation queen cells 3</string>
    <string name="liahnutie">hatching mothers</string>
    <string name="zuzitkovanie_matiek">Marking and utilization of maternal</string>
    <string name="vaznenie_od">	Imprisonment from oddielkov</string>
    <string name="vaznenie_do">	Nucleus to imprisonment</string>
    <string name="prelet_od">Approximately overflights by mothers</string>
    <string name="prelet_do">Approximately overflights mothers to</string>
    <string name="snubne_prelety">Wedding overflights by mothers:</string>
    <string name="prenikanie_spermii">Penetration of sperm into the seminal vesicles</string>
    <string name="prve_nakladene_vajicka">First spawning eggs</string>
    <string name="pridat_do_kalendara">Add event to calendar</string>
    <string name="ulozit_event">Archive date farming</string>
    <string name="date_not_added">Unable to insert date into database</string>
    <string name="date_not_added_and_calendar_cancelled">Failed to insert the date into the database. Stopping saving the calendar.</string>
    <string name="date_added">Date successfully inserted into database</string>
    <string name="date_deleted">Date has been deleted from the database and calendar events</string>
    <string name="date_not_deleted">Date has not been deleted from the database</string>
    <string name="date_not_found">Date not found</string>
    <string name="delete">Delete record from database</string>
    <string name="detail">Show schedules for the record</string>
    <string name="no_dates_available">no records</string>
    <string name="date_exists">Date already exists in the database</string>
    <string name="calendar_created">Records were included in the calendar</string>
    <string name="calendar_not_created">Unable to move records to the calendar</string>
    <string name="date_old">The date is too old. Allowed a date not earlier than 23 days</string>
    <string name="chov_matiek_nadpis">Breeding for mothers </string>
    <string name="no_calendar_configured">There was no calendar. Make sure it is properly configured.</string>
    <string name="note_dialog">note</string>
    <string name="note_dialog_text">Submit a short note to record</string>
    <string name="cancel">cancel</string>
    <string name="list_queens_help">Hold the line for more options</string>
    <string name="writing_to_calendar">Write an event to the calendar</string>
    <string name="popis_programu">Calendar breeding mothers used to layout the different steps for beekeeping mothers. For Android 4.0 and above allows you to save the notification of the individual steps in the calendar.\nContact: polnohospodari@polnohospodari.sk</string>
    <string name="contact">
        <![CDATA[
        <u><a href="mailto:polnohospodari@polnohospodari.sk">@ HK Solutions</a></u>
        ]]>
    </string>

</resources>